# starle

./: pyproject.toml
backend/: config.py  enums.py  main.py  starle.db
backend/routers/: game.py
backend/schemas/: actor.py  credits.py  people.py  starle.py
backend/services/: db.py  game.py  http_client.py  starle.py  tmdb.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.svelte  app.css
frontend/src/components/: Fa.svelte  Game.svelte
frontend/src/stores/: game.store.ts
frontend/src/types/: movie.type.ts  starle.type.ts
frontend/src/utils/: date.util.ts  http.util.ts
