[tool.poetry]
name = "starle"
version = "0.1.0"
description = ""
authors = ["Jeffrey Nicholas <jefnic23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
fake-useragent = "^1.4.0"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
