[tool.poetry]
name = "starle"
version = "0.1.0"
description = ""
authors = ["Jeffrey Nicholas <jefnic23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.107.0"
fake-useragent = "1.4.0"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
attrs = "23.1.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dnspython = "2.4.2"
dulwich = "0.21.7"
email-validator = "2.1.0.post1"
fastjsonschema = "2.19.0"
filelock = "3.13.1"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.26.0"
idna = "3.6"
importlib-metadata = "7.0.1"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
keyring = "24.3.0"
markupsafe = "2.1.3"
more-itertools = "10.1.0"
msgpack = "1.0.7"
multidict = "6.0.4"
numpy = "1.26.2"
orjson = "3.9.10"
packaging = "23.2"
pexpect = "4.9.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pydantic = "2.5.3"
pydantic-extra-types = "2.2.0"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
pyproject-hooks = "1.0.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.6.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.0"
starlette = "0.28.0"
tomlkit = "0.12.3"
trove-classifiers = "2023.11.29"
typing-extensions = "4.9.0"
ujson = "5.9.0"
urllib3 = "2.1.0"
uvicorn = "0.25.0"
virtualenv = "20.25.0"
watchfiles = "0.21.0"
websockets = "12.0"
yarl = "1.9.4"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
